fix: cleans up styling and spacing on review card on home page

--- a/src/home/home.scss
+++ b/src/home/home.scss
@@ -98,18 +98,9 @@
     padding-top: 130px;
     padding-bottom: 130px;
 
-    .reviews-title {
-      font-size: 13px;
-      font-weight: bold;
-      text-transform: uppercase;
-      letter-spacing: 2.36px;
-      text-align: center;
-      color: #3c3d41;
-      padding-bottom: 41px;
-    }
-
     .review-quote {
       text-align: center;
+      padding-top: 41px;
 
       img {
         margin: 0 auto;
